--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
     "@remix-run/serve": "^2.15.3",
+    "@vercel/remix": "^2.15.3",
     "i18next": "^24.2.2",
     "isbot": "^4.1.0",
     "lucide-react": "^0.475.0",
