use clipboard-copy and changed encoding of postProcessing callback.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^2.15.3",
     "@remix-run/serve": "^2.15.3",
     "@vercel/remix": "^2.15.3",
+    "clipboard-copy": "^4.0.1",
     "i18next": "^24.2.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
